# ts

./: README.md
be/db_test/: .~lock.demo_write.xlsx#  buildTest.sh  constants.go  core_constants.go  db.go  exls.go  logger.go  readme  server_config.go  site_constants.go  test.go
be/db_test/static/: test_document.xls
be/golang_be/.ipynb_checkpoints/: Liquor store analyst-checkpoint.ipynb  pc_Liquor store analyst-checkpoint.ipynb
be/golang_be/core/: .masterCore.go.swo  ack_stress_test.go  client_helper.go  command_helper.go  command_mux.go  ~  (+25 more)
docs/: master_core_add_user.drawio  schematic  top-level.drawio
docs/be_doc/: be_core.drawio  fota_core.drawio
docs/fw_doc/: master_core.drawio
fw/: .clang-format  .clang-format.orig  .sdkconfig.swn  CMakeLists.txt  Dockerfile  README.md  fmt.sh  partitions.csv
fw/main/: .main.c.swo  .qcore.h.swo  CMakeLists.txt  console_core.c  console_core.h  file_core.c  file_core.h  fota_task.c  fota_task.h  lcd.c  lcd.h  ll.c  ll.h  main.c  master_core.c  master_core.h  packet.c  packet.h  parallax.c  parallax.h  qcore.c  qcore.h  state_core.c  state_core.h  sync_task.c  sync_task.h  system_defines.h  tcp_core.h  timer_helper.c  timer_helper.h  todos.txt  wifi_core.c  wifi_core.h
schematic/: .bom.swo  bom
scripts/: INSTRUCTIONS  masterScript.sh
scripts/dbscripts/: dump.sh  import.sh  instructions.txt
scripts/deamonScripts/: systemctl_setup.sh  timeScan-Daemon.sh  timeScan.service
scripts/installScripts/: pg_hba.conf  psql_init.sh  r_install_script.R  setup.sql  setup_env.sh  setup_go.sh  setup_r.sh  systemctl_setup.sh
(+15 files in other folders)
