idf_component_register(SRCS "file_core.c"
                            "ll.c"
                            "main.c"
                            "packet.c"
                            "parallax.c"
                            "qcore.c"
                            "timer_helper.c"
                            "master_core.c"
                            "lcd.c"
                            "fota_task.c"
                            "sync_task.c"
                            "state_core.c"
                            "console_core.c"
                            "wifi_core.c"
                            INCLUDE_DIRS "."
                            )
